services_infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/data-provider/(.+)
            backend:
              serviceName: data-provider-service
              servicePort: 8000
          - path: /api/consent-manager/(.+)
            backend:
              serviceName: consent-manager-service
              servicePort: 8000
